--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "single-spa": "^4.3.6",
     "single-spa-angular": "^3.0.1",
     "single-spa-react": "^2.10.2",
+    "single-spa-vue": "^1.5.1",
+    "vue": "^2.6.10",
     "webpack": "^4.35.0",
     "zone.js": "^0.9.1"
   },
