feat:将systemjs改为本地引用,增加dev:all命令,一次启动所有app应用

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "prod": "NODE_ENV=production webpack --config webpack.prod.config.js  --display-used-exports --optimize-minimize",
     "dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.config.js",
     "dev-server": "node webpack.dev.server.js",
-    "dll": "NODE_ENV=production webpack --config webpack.dll.config.js"
+    "dll": "NODE_ENV=production webpack --config webpack.dll.config.js",
+    "dev:app1": "cd ./src/app1/ && yarn dev:spa",
+    "dev:app2": "cd ./src/app2/ && yarn dev:spa",
+    "dev:app3": "cd ./src/app3/ && yarn dev:spa",
+    "dev:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"app1,app2,app3\" \"npm run dev:app1\" \"npm run dev:app2\" \"npm run dev:app3\""
   },
   "keywords": [],
   "author": "",
@@ -35,6 +39,7 @@
     "single-spa-angular": "^3.0.1",
     "single-spa-react": "^2.10.2",
     "single-spa-vue": "^1.5.1",
+    "systemjs": "^4.1.0",
     "vue": "^2.6.10",
     "webpack": "^4.35.0",
     "zone.js": "^0.9.1"
@@ -48,6 +53,8 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^4.1.1",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
     "electron": "^5.0.6",
     "electron-packager": "^14.0.1",
