--- a/package.json
+++ b/package.json
@@ -12,46 +12,22 @@
     "dev:app1": "cd ./src/app1/ && yarn dev:spa",
     "dev:app2": "cd ./src/app2/ && yarn dev:spa",
     "dev:app3": "cd ./src/app3/ && yarn dev:spa",
-    "dev:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"app1,app2,app3\" \"npm run dev:app1\" \"npm run dev:app2\" \"npm run dev:app3\""
+    "dev:navbar": "cd ./src/navbar/ && yarn dev:spa",
+    "dev:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"navbar,app1,app2,app3\" \"npm run dev:navbar\" \"npm run dev:app1\" \"npm run dev:app2\" \"npm run dev:app3\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "^4.3.3",
-    "@angular/compiler": "^4.3.3",
-    "@angular/core": "^4.3.3",
-    "@angular/platform-browser": "^4.3.3",
-    "@angular/platform-browser-dynamic": "^4.3.3",
-    "@angular/router": "^4.3.6",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "core-js": "^2.4.1",
-    "lodash": "^4.17.11",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-loadable": "^5.5.0",
-    "react-router-dom": "^5.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.5.2",
     "single-spa": "^4.3.6",
-    "single-spa-angular": "^3.0.1",
-    "single-spa-react": "^2.10.2",
-    "single-spa-vue": "^1.5.1",
     "systemjs": "^4.1.0",
-    "vue": "^2.6.10",
-    "webpack": "^4.35.0",
-    "zone.js": "^0.9.1"
+    "webpack": "^4.35.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.1",
     "copy-webpack-plugin": "^5.0.3",
@@ -60,22 +36,10 @@
     "electron-packager": "^14.0.1",
     "express": "^4.17.1",
     "express-history-api-fallback": "^2.2.1",
-    "file-loader": "^4.0.0",
-    "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^0.23.1",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.2",
-    "url-loader": "^2.0.1",
     "webpack-cli": "^3.3.5",
-    "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^4.2.1",
-    "webpack-parallel-uglify-plugin": "^1.1.0"
+    "webpack-merge": "^4.2.1"
   }
 }
