--- a/src/navbar/package.json
+++ b/src/navbar/package.json
@@ -18,6 +18,7 @@
     "core-js": "^2.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "single-spa-react": "^2.10.2",
     "webpack": "^4.35.0"
   },
