feat: 删除各个服务的spa-index.js文件,集成到index.js文件,通过环境变量SINGLE_SPA来区分

--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.config.js",
     "dev-server": "node webpack.dev.server.js",
     "dll": "NODE_ENV=production webpack --config webpack.dll.config.js",
-    "dev:app1": "cd ./src/app1/ && yarn dev:spa",
-    "dev:app2": "cd ./src/app2/ && yarn dev:spa",
-    "dev:app3": "cd ./src/app3/ && yarn dev:spa",
-    "dev:navbar": "cd ./src/navbar/ && yarn dev:spa",
-    "dev:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"navbar,app1,app2,app3\" \"npm run dev:navbar\" \"npm run dev:app1\" \"npm run dev:app2\" \"npm run dev:app3\""
+    "dev:app1": "cd ./src/app1/ && yarn dev",
+    "dev:app2": "cd ./src/app2/ && yarn dev",
+    "dev:app3": "cd ./src/app3/ && yarn dev",
+    "dev:navbar": "cd ./src/navbar/ && yarn dev",
+    "dev:spa:app1": "cd ./src/app1/ && yarn dev:spa",
+    "dev:spa:app2": "cd ./src/app2/ && yarn dev:spa",
+    "dev:spa:app3": "cd ./src/app3/ && yarn dev:spa",
+    "dev:spa:navbar": "cd ./src/navbar/ && yarn dev:spa",
+    "dev:spa:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"navbar,app1,app2,app3\" \"npm run dev:spa:navbar\" \"npm run dev:spa:app1\" \"npm run dev:spa:app2\" \"npm run dev:spa:app3\""
   },
   "keywords": [],
   "author": "",
