feat: 增加globalMsgCenter全局消息总线对象,让微应用可以互相通信

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "importHelpers": true,
     "jsx": "react", // 开启 jsx ，支持 React
     "esModuleInterop": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "downlevelIteration": true
   },
   "exclude": [
     // 不编译这些目录里的文件
