--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "dev:spa:app2": "cd ./src/app2/ && yarn dev:spa",
     "dev:spa:app3": "cd ./src/app3/ && yarn dev:spa",
     "dev:spa:navbar": "cd ./src/navbar/ && yarn dev:spa",
-    "dev:spa:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"navbar,app1,app2,app3\" \"npm run dev:spa:navbar\" \"npm run dev:spa:app1\" \"npm run dev:spa:app2\" \"npm run dev:spa:app3\""
+    "dev:spa:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"navbar,app1,app2,app3\" \"npm run dev:spa:navbar\" \"npm run dev:spa:app1\" \"npm run dev:spa:app2\" \"npm run dev:spa:app3\"",
+    "prod:spa:app1": "cd ./src/app1/ && yarn prod:spa && cp -f dist/* ../../dist/app1",
+    "prod:spa:app2": "cd ./src/app2/ && yarn prod:spa && cp -f dist/* ../../dist/app2",
+    "prod:spa:app3": "cd ./src/app3/ && yarn prod:spa && cp -f dist/* ../../dist/app3",
+    "prod:spa:navbar": "cd ./src/navbar/ && yarn prod:spa && cp -f dist/* ../../dist/navbar",
+    "prod:spa:all": "yarn prod:spa:navbar && yarn prod:spa:app1 &&yarn prod:spa:app2 &&yarn prod:spa:app3"
   },
   "keywords": [],
   "author": "",
