--- a/src/app2/package.json
+++ b/src/app2/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "NODE_ENV=production webpack --config webpack.prod.config.js  --display-used-exports --optimize-minimize",
     "dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.config.js",
-    "dev:spa": "NODE_ENV=development webpack-dev-server --config webpack.dev.spa.config.js"
+    "dev:spa": "webpack-dev-server --config webpack.dev.spa.config.js",
+    "prod:spa": "webpack --config webpack.prod.spa.config.js"
   },
   "keywords": [],
   "author": "",
