feat: 首页引入antd组件,方便后续加入更多内容,并解决在有路由的情况下,刷新页面报错的问题

--- a/src/navbar/.babelrc
+++ b/src/navbar/.babelrc
@@ -8,5 +8,15 @@
     ],
     "@babel/preset-react"
   ],
-  "plugins": ["dynamic-import-webpack", "@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "dynamic-import-webpack",
+    "@babel/plugin-proposal-class-properties",
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "style": true
+      }
+    ]
+  ]
 }
