--- a/src/app3/.babelrc
+++ b/src/app3/.babelrc
@@ -1,10 +1,8 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "modules": false
-      }
-    ]
+  "presets": ["@babel/preset-env"],
+  "plugins": [
+    "transform-vue-jsx",
+    "transform-runtime",
+    ["import", { "libraryName": "ant-design-vue", "libraryDirectory": "es", "style": true }]
   ]
 }
