--- a/src/app3/package.json
+++ b/src/app3/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ant-design-vue": "^1.3.13",
     "single-spa-vue": "^1.5.1",
     "vue": "^2.6.10",
+    "vue-router": "^3.0.7",
     "webpack": "^4.35.0"
   },
   "devDependencies": {
@@ -23,6 +25,9 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
@@ -35,6 +40,8 @@
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
     "url-loader": "^2.0.1",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1",
