--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dev:spa:app2": "cd ./src/app2/ && yarn dev:spa",
     "dev:spa:app3": "cd ./src/app3/ && yarn dev:spa",
     "dev:spa:navbar": "cd ./src/navbar/ && yarn dev:spa",
+    "dev:server": "cd ./server/ && yarn dev",
+    "dev:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"dev,server\" \"npm run dev\" \"npm run dev:server\"",
     "dev:spa:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"navbar,app1,app2,app3\" \"npm run dev:spa:navbar\" \"npm run dev:spa:app1\" \"npm run dev:spa:app2\" \"npm run dev:spa:app3\"",
     "prod:spa:app1": "cd ./src/app1/ && yarn prod:spa && cp -f dist/* ../../dist/app1",
     "prod:spa:app2": "cd ./src/app2/ && yarn prod:spa && cp -f dist/* ../../dist/app2",
