--- a/src/app2/package.json
+++ b/src/app2/package.json
@@ -1,57 +1,43 @@
 {
-  "name": "single-spa-demo",
+  "name": "app2",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "NODE_ENV=production webpack --config webpack.prod.config.js  --display-used-exports --optimize-minimize",
-    "dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.config.js",
-    "dev:spa": "webpack-dev-server --config webpack.dev.spa.config.js",
-    "prod:spa": "webpack --config webpack.prod.spa.config.js"
+    "ng": "ng",
+    "dev": "ng serve --port 9092",
+    "build": "ng build",
+    "lint": "ng lint",
+    "build:single-spa": "ng build --prod --deploy-url http://localhost:9092/",
+    "serve:single-spa": "ng serve -c=spa --disable-host-check --port 9092 --deploy-url http://localhost:9092/ --live-reload false"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "dependencies": {
-    "@angular/common": "^4.3.3",
-    "@angular/compiler": "^4.3.3",
-    "@angular/core": "^4.3.3",
-    "@angular/platform-browser": "^4.3.3",
-    "@angular/platform-browser-dynamic": "^4.3.3",
-    "@angular/router": "^4.3.6",
-    "core-js": "^2.4.1",
-    "lodash": "^4.17.11",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.5.2",
+    "@angular-builders/custom-webpack": "^8",
+    "@angular/animations": "~8.1.3",
+    "@angular/common": "~8.1.3",
+    "@angular/compiler": "~8.1.3",
+    "@angular/core": "~8.1.3",
+    "@angular/forms": "~8.1.3",
+    "@angular/platform-browser": "~8.1.3",
+    "@angular/platform-browser-dynamic": "~8.1.3",
+    "@angular/router": "~8.1.3",
+    "ng-zorro-antd": "^8.1.2",
+    "rxjs": "~6.4.0",
     "single-spa-angular": "^3.0.1",
-    "webpack": "^4.35.0",
-    "zone.js": "^0.9.1"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-dynamic-import-webpack": "^1.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
-    "happypack": "^5.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.2",
-    "url-loader": "^2.0.1",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1",
-    "webpack-parallel-uglify-plugin": "^1.1.0"
+    "@angular-devkit/build-angular": "~0.801.3",
+    "@angular/cli": "~8.1.3",
+    "@angular/compiler-cli": "~8.1.3",
+    "@angular/language-service": "~8.1.3",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^5.0.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
