feat:每个应用暴露Store对象,并提供路由信息

--- a/src/app3/.babelrc
+++ b/src/app3/.babelrc
@@ -2,7 +2,8 @@
   "presets": ["@babel/preset-env"],
   "plugins": [
     "transform-vue-jsx",
-    "transform-runtime",
+    "@babel/transform-runtime",
+    "@babel/plugin-proposal-class-properties",
     ["import", { "libraryName": "ant-design-vue", "libraryDirectory": "es", "style": true }]
   ]
 }
