--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "single-spa": "^4.3.6",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.7",
     "systemjs": "^4.1.0"
   },
   "devDependencies": {
