feat:去掉各个子应用的依赖single-spa-react,single-spa-vue,single-spa-angular,并增加js沙箱隔离(初步功能)

--- a/src/app1/.babelrc
+++ b/src/app1/.babelrc
@@ -9,6 +9,12 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ],
     "dynamic-import-webpack",
     "@babel/plugin-proposal-class-properties",
     [
