--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "single-spa": "^4.3.6",
+    "single-spa-leaked-globals": "^1.0.0",
+    "systemjs": "^4.1.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.7",
-    "systemjs": "^4.1.0"
+    "vue-router": "^3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
