--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dev:spa:app1": "cd ./src/app1/ && yarn dev:spa",
     "dev:spa:app2": "cd ./src/app2/ && npm run serve:single-spa",
     "dev:spa:app3": "cd ./src/app3/ && yarn dev:spa",
+    "dev:spa:app4": "cd ../microfrontends/ant-design-pro && yarn dev:spa",
+    "dev:spa:app5": "cd ../microfrontends/ant-design-pro-vue && yarn dev:spa",
     "dev:spa:navbar": "cd ./src/navbar/ && yarn dev:spa",
     "dev:server": "cd ./server/ && yarn dev",
     "dev:all": "concurrently --kill-others --kill-others-on-fail -p name --names \"dev,server\" \"npm run dev\" \"npm run dev:server\"",
